<package format="3">
  <name>onerobot_description</name>
  <description>Onerobot urdf description</description>
  <maintainer email="aliben.develop@gmail.com">aliben</maintainer>
  <license>BSD-3-Clause</license>
  <version>1.0.0</version>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf_tutorial</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
